# IA.BAK

./: .gitignore  IABak.hs  README  README.md  add-shardmeta-branch.sh  change-email  checkoutshard  combineemails  config.cabal  config.hs  expireemailer  extract_collection  find-item  flock.pl  get_collection_size.jq  get_item_files.jq  get_item_updates.jq  iabak  iabak-cronjob  iabak-helper  iabak-hourlysync  importlist  install-fsck-service  install-git-annex  locks.sh  make-shard.sh  mkSHARD  prompt-email  pushed.sh  pushme.cgi  register-helper.pl  repolist  repolist.README  setupshardrepo  shardmaint  shardmaint-fast  shardstats  shardstats-all  smallestfirst_shards  split-collection  (+3 more)
SHARD1/: README  pubkeys
SHARD2/: pubkeys
SHARD3/: pubkeys
git-annex.linux/: LICENSE  README  gconvdir  git  git-annex  git-annex-shell  git-annex-webapp  git-annex.MANIFEST  git-receive-pack  git-shell  git-upload-pack  libdirs  runshell  trustedkeys.gpg
git-annex.linux/exe/: sha384sum
git-annex.linux/git-core/: git  git-add  git-add--interactive  git-annotate  git-apply  git-archive  (+124 more)
hooks/: README  post-receive
privdata/: keyring.gpg  privdata.gpg
registrar/: register.cgi  register.pl
server/: restricted-shell  update-authorized_keys
test/: basic-testcase.sh
tsv/: sort-by-item  split-by-size-column-into-4TB-or-closest  verify-item-integrity
utils/: clientinfolinks  clientlist  combineemails  expireleaderboard  updateclone  uuidtoemail  uuidtoemail-expiring
web/: clientpages.pl  graph-gen.sh  graph.template.head  graph.template.middle  graph.template.tail
(+193 files in other folders)
