-- This is a cabal file to use to build your propellor configuration.

Name: config
Cabal-Version: >= 1.6
Build-Type: Simple
Version: 0

Executable propellor-config
  Main-Is: config.hs
  GHC-Options: -threaded -Wall -fno-warn-tabs -O0
  Extensions: TypeOperators
  Build-Depends: propellor >= 3.0, base >= 3
